<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".MainActivity">


    <Spinner
        android:id="@+id/zone1_spinner"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:background="@color/colorZone1"
        android:entries="@array/zone1_array"
        android:popupBackground="@color/colorArray1"
        android:text="@string/zone1_button"
        app:layout_constraintBottom_toTopOf="@+id/zone2_spinner"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Spinner
        android:id="@+id/zone3_spinner"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/colorZone3"
        android:entries="@array/zone3_array"
        android:popupBackground="@color/colorZone3"
        android:text="@string/zone3_button"
        app:layout_constraintBottom_toTopOf="@+id/zone4_spinner"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zone2_spinner" />

    <Spinner
        android:id="@+id/zone2_spinner"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/colorZone2"
        android:entries="@array/zone2_array"
        android:popupBackground="@color/colorZone2"
        android:text="@string/zone2_button"
        app:layout_constraintBottom_toTopOf="@+id/zone3_spinner"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zone1_spinner" />

    <Spinner
        android:id="@+id/zone4_spinner"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/colorZone4"
        android:entries="@array/zone4_array"
        android:popupBackground="@color/colorZone4"
        android:text="@string/zone4_button"
        app:layout_constraintBottom_toTopOf="@+id/zone5_spinner"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zone3_spinner" />

    <Spinner
        android:id="@+id/zone5_spinner"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorZone5"
        android:entries="@array/zone5_array"
        android:popupBackground="@color/colorZone5"
        android:text="@string/zone5_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zone4_spinner" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="286dp"
        android:layout_height="0dp"
        android:background="@color/mainBackground"
        android:contentDescription="@string/contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/nau_park_map" />

    <Button
        android:id="@+id/checklot_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/checklot_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zone5_spinner" />

</android.support.constraint.ConstraintLayout>